--- a/src/scss-spritesmith-template-retina.handlebars
+++ b/src/scss-spritesmith-template-retina.handlebars
@@ -1,87 +1,136 @@
 {
-  // Default options
-  'functions': true,
-  'variableNameTransforms': ['dasherize']
+  functions: true,
+  variableNameTransforms: ["dasherize"],
 }
 
 {{#extend "scss_spritesmith_template"}}
 {{#content "sprites" mode="append"}}
+// Retina sprites
+//
+// In retina sprites, the suffix "-retina" corresponds to the "size" in
+// the formula.
+
 {{#each retina_sprites}}
-${{strings.name_name}}: '{{name}}';
-${{strings.name_x}}: {{px.x}};
-${{strings.name_y}}: {{px.y}};
-${{strings.name_offset_x}}: {{px.offset_x}};
-${{strings.name_offset_y}}: {{px.offset_y}};
-${{strings.name_width}}: {{px.width}};
-${{strings.name_height}}: {{px.height}};
-${{strings.name_total_width}}: {{px.total_width}};
-${{strings.name_total_height}}: {{px.total_height}};
-${{strings.name_image}}: '{{{escaped_image}}}';
-${{strings.name}}: ({{px.x}}, {{px.y}}, {{px.offset_x}}, {{px.offset_y}}, {{px.width}}, {{px.height}}, {{px.total_width}}, {{px.total_height}}, '{{{escaped_image}}}', '{{name}}', );
+$sprite-{{removePrefix strings.name_name}}-retina: "sprite-{{removePrefix name}}-retina";
+$sprite-{{removePrefix strings.name_x}}-retina: {{px.x}};
+$sprite-{{removePrefix strings.name_y}}-retina: {{px.y}};
+$sprite-{{removePrefix strings.name_offset_x}}-retina: {{px.offset_x}};
+$sprite-{{removePrefix strings.name_offset_y}}-retina: {{px.offset_y}};
+$sprite-{{removePrefix strings.name_width}}-retina: {{px.width}};
+$sprite-{{removePrefix strings.name_height}}-retina: {{px.height}};
+$sprite-{{removePrefix strings.name}}-retina: ();
+$sprite-{{removePrefix strings.name}}-retina: map-merge(
+  (
+    "name": $sprite-{{removePrefix strings.name_name}}-retina,
+    "x": $sprite-{{removePrefix strings.name_x}}-retina,
+    "y": $sprite-{{removePrefix strings.name_y}}-retina,
+    "offset-x": $sprite-{{removePrefix strings.name_offset_x}}-retina,
+    "offset-y": $sprite-{{removePrefix strings.name_offset_y}}-retina,
+    "width": $sprite-{{removePrefix strings.name_width}}-retina,
+    "height": $sprite-{{removePrefix strings.name_height}}-retina,
+  ),
+  $sprite-{{removePrefix strings.name}}-retina
+);
+
 {{/each}}
 {{/content}}
 {{#content "spritesheet" mode="append"}}
-${{retina_spritesheet_info.strings.name_width}}: {{retina_spritesheet.px.width}};
-${{retina_spritesheet_info.strings.name_height}}: {{retina_spritesheet.px.height}};
-${{retina_spritesheet_info.strings.name_image}}: '{{{retina_spritesheet.escaped_image}}}';
-${{retina_spritesheet_info.strings.name_sprites}}: ({{#each retina_sprites}}${{strings.name}}, {{/each}});
-${{retina_spritesheet_info.strings.name}}: ({{retina_spritesheet.px.width}}, {{retina_spritesheet.px.height}}, '{{{retina_spritesheet.escaped_image}}}', ${{retina_spritesheet_info.strings.name_sprites}}, );
 
-// These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
+// Retina spritesheet
+
+$spritesheet-width-retina: {{retina_spritesheet.px.width}};
+$spritesheet-height-retina: {{retina_spritesheet.px.height}};
+$spritesheet-url-retina: "{{{retina_spritesheet.escaped_image}}}";
+$spritesheet-sprites-retina: (
+  {{#each retina_sprites}}
+  {{#unless @last}}
+  $sprite-{{removePrefix strings.name}}-retina,
+  {{else}}
+  $sprite-{{removePrefix strings.name}}-retina
+  {{/unless}}
+  {{/each}}
+);
+$spritesheet-retina: ();
+$spritesheet-retina: map-merge(
+  (
+    "width": $spritesheet-width-retina,
+    "height": $spritesheet-height-retina,
+    "url": $spritesheet-url-retina,
+    "sprites": $spritesheet-sprites-retina,
+  ),
+  $spritesheet-retina
+);
+
+// Sprite groups
 //
-// The list formatted variables are intended for mixins like `retina-sprite` and `retina-sprites`.
-{{#each retina_groups}}
-${{strings.name_group_name}}: '{{name}}';
-${{strings.name_group}}: ('{{name}}', ${{normal.strings.name}}, ${{retina.strings.name}}, );
-{{/each}}
-${{retina_groups_info.strings.name}}: ({{#each retina_groups}}${{strings.name_group}}, {{/each}});
-{{/content}}
+// Sprite groups contain information about sprites and their retina pairs.
 
+{{#each retina_groups}}
+$sprite-{{strings.name_group_name}}: "sprite-{{name}}";
+$sprite-{{strings.name_group}}: ();
+$sprite-{{strings.name_group}}: map-merge(
+  (
+    "name": $sprite-{{strings.name_group_name}},
+    "normal": $sprite-{{normal.strings.name}},
+    "retina": $sprite-{{removePrefix retina.strings.name}}-retina,
+  ),
+  $sprite-{{strings.name_group}}
+);
+
+{{/each}}
+$sprite-groups: (
+  {{#each retina_groups}}
+  {{#unless @last}}
+  $sprite-{{strings.name_group}},
+  {{else}}
+  $sprite-{{strings.name_group}}
+  {{/unless}}
+  {{/each}}
+);
+{{/content}}
 {{#content "sprite-functions" mode="append"}}
 {{#if options.functions}}
 
-// The `retina-sprite` mixin sets up rules and a media query for a sprite/retina sprite.
-//   It should be used with a "retina group" variable.
+// Retina sprite mixins
 //
-// The media query is from CSS Tricks: https://css-tricks.com/snippets/css/retina-display-media-query/
-//
-// $icon-home-group: ('icon-home', $icon-home, $icon-home-2x, );
-//
-// .icon-home {
-//   @include retina-sprite($icon-home-group);
-// }
-@mixin sprite-background-size($sprite) {
-  $sprite-total-width: nth($sprite, 7);
-  $sprite-total-height: nth($sprite, 8);
-  background-size: $sprite-total-width $sprite-total-height;
+// Use variables like "sprite-something-group" for these mixins to insert
+// information about the normal and retina version of the sprite into your
+// CSS classes.
+
+@mixin sprite-background-size($sprite-type) {
+  @if $sprite-type = "normal" {
+    background-size: $spritesheet-width $spritesheet-height;
+  } @else {
+    background-size: $spritesheet-width-retina $spritesheet-height-retina;
+  }
 }
 
-@mixin retina-sprite($retina-group) {
-  $normal-sprite: nth($retina-group, 2);
-  $retina-sprite: nth($retina-group, 3);
-  @include sprite($normal-sprite);
+@mixin sprite-retina($sprite-group) {
+  $sprite-normal: map-get($sprite-group, "normal");
+  $sprite-retina: map-get($sprite-group, "retina");
+  @include sprite($sprite-normal);
 
-  @media (-webkit-min-device-pixel-ratio: 2),
-         (min-resolution: 192dpi) {
-    @include sprite-image($retina-sprite);
-    @include sprite-background-size($normal-sprite);
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    @include sprite-image($sprite-retina);
+    @include sprite-background-size("normal");
   }
 }
 {{/if}}
 {{/content}}
-
 {{#content "spritesheet-functions" mode="append"}}
 {{#if options.functions}}
 
-// The `retina-sprites` mixin generates a CSS rule and media query for retina groups
-//   This yields the same output as CSS retina template but can be overridden in SCSS
+// Retina spritesheet mixins
 //
-// @include retina-sprites($retina-groups);
-@mixin retina-sprites($retina-groups) {
-  @each $retina-group in $retina-groups {
-    $sprite-name: nth($retina-group, 1);
+// Use the `$sprite-groups` variable when calling a mixin to get a set of CSS
+// classes that contain information about the normal and retina version of
+// each sprite.
+
+@mixin sprites-retina($sprite-groups) {
+  @each $sprite-group in $sprite-groups {
+    $sprite-name: map-get($sprite-group, "name");
     .#{$sprite-name} {
-      @include retina-sprite($retina-group);
+      @include sprite-retina($sprite-group);
     }
   }
 }
